--- a/Neo/FrmRptCita.resx
+++ b/Neo/FrmRptCita.resx
@@ -170,17 +170,17 @@
   <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJFSURBVDhPjVNLTxNhFJ2FC2NcGMPvcOvaf9Gdv8FFN26a
-        PqAwrXY6M6VAq7EB0lpRI4/GDdamYyjEYpWHgqBVSwAJKD6Y77PQ473jEILUx0luZpL5zrnnnu+O8js0
-        TbtqmuZ2OBxucSUSiaZhGLVoNNrhHmkPPqDr+lYklW3pjxvosr4hYAlEyzvoLdSgGb2Ix+OX3OMnQZ03
-        kxOziM8I3HspUHorUKTi976qQMTahZnKtBchsmXemUTfrMDqThON3X08W2+iuGrj4WsbY8sSyaqEXt5E
-        d3fPvks7As18ECl/xpP3P7Dx9QAr2/uorkkU39gYX7IxsiAwsihxfZrc3C+BGqZcqqLEYrGLenoQakVg
-        6p1A5YPANJVVtzG5YmP0lY3cvEB+QZJDCfNRHRTsukt37F82hh4gRuo8M5O4Mz8LyzbuLtoYfiEw9Fxg
-        gAS00gYo8O8u/chBz5SgeYXTkW3zk8nZOYFbNUEiEomnbRwwDjMYnpMYXZLIk2W2zZ2ZnKZwB0kgQmP2
-        UwZ0Ezdd6i/Q/VeSHA6NkZ2XTmAZsnyDiBkSYLI2I2FYW+DlcmnHQdv2hReGw+ynWZnElaZ3zof3IJHO
-        sID0+/0nd4E3kWZbUweyrXixgZC152yiWv7kbGKXeq0ViagoTIzD5/O1AoFAxaUeB93KFd5KzsX9F/YO
-        /wUi1nO5LKxy6e8ifwKROoKhoMznbzsinZ0huJ/+iTNU57k8Hs+FYDAoVVVtkeBH5+t/4BTVWapzVI6Q
-        1+sNK4py+icTnvqYJH65kgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJGSURBVDhPjVNLTxNhFJ2FC2NcGMPvcOvaf9Gdv8FFN26a
+        vu0jdtpOKYVqbHi0VtTIo3GDtekYCrFY5aEgaNUSQAKKD+b7bJnjveMQgtTHSU5mkvnOufee747yO1RV
+        vapp2k4gEDCZqVSqnUwmG9FotMc+0h18IJFIbIf7R8zE4xYC+jd4dIFodRe9pQbUZC/i8fgl+/hJUOWt
+        9OQc4rMC914KVN4KlIn83lcXiOh70AZy3U1IrGt3ptA3J7C220Zrr4NnG22U1ww8fG1gfEUiXZdIVLcQ
+        DF7r2LIj0MwHkepnPHn/A5tfD7C600F9XaL8xsDEsoHRRYHRJYnrM9TN/Qqo4IAtVZRYLHYxkR1EuCYw
+        /U6g9kFghqg3DUytGhh7ZaCwIFBclNShhPaoCQp2w5Zb7V9ODj1AjNx5ZhZxZX6WVgzcXTIw/EJg6LlA
+        PxmolU1Q4N9t+VEHoWlB8wqrIrfNTxbn5wVuNQSZSKSedumAcZjB8LzE2LJEkVrmtrkyi7MU7iAZRGjM
+        DGVAN3HTlv4C3X8tzeHQGPkFaQWWo5ZvkDBHBixWZyWS+jZ4uWzZcdC2feGF4TAzNCuLmFl653x4D1LZ
+        HF1jULrd7pO7wJtIs62HMiNmvNyCT9+3NjFc/WRtoj8UNSORMEqTE3C5XKbH46nZ0uOgW7nCW8m52P/C
+        /uG/QMJmoZCHXq383eRPIFGP1+eVxeJty8Tv98H+9E+cIZ5nOhyOC16vV4ZCIZMMP1pf/wOniGeJ54iW
+        kdPpDCqKcvon2Bz6fW2nzV4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnVer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -229,6 +229,12 @@
         W8GUX4GWHFZUF1QP/B3LVeTfTP9xZee/YZjfQoLMnY5yS70AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="Costo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Venta.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="taCitaMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>254, 16</value>
   </metadata>
