--- a/Neo/FrmRptCita.resx
+++ b/Neo/FrmRptCita.resx
@@ -170,17 +170,17 @@
   <data name="btnBuscar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJGSURBVDhPjVNLTxNhFJ2FC2NcGMPvcOvaf9Gdv8FFN26a
-        vu0jdtpOKYVqbHi0VtTIo3GDtekYCrFY5aEgaNUSQAKKD+b7bJnjveMQgtTHSU5mkvnOufee747yO1RV
-        vapp2k4gEDCZqVSqnUwmG9FotMc+0h18IJFIbIf7R8zE4xYC+jd4dIFodRe9pQbUZC/i8fgl+/hJUOWt
-        9OQc4rMC914KVN4KlIn83lcXiOh70AZy3U1IrGt3ptA3J7C220Zrr4NnG22U1ww8fG1gfEUiXZdIVLcQ
-        DF7r2LIj0MwHkepnPHn/A5tfD7C600F9XaL8xsDEsoHRRYHRJYnrM9TN/Qqo4IAtVZRYLHYxkR1EuCYw
-        /U6g9kFghqg3DUytGhh7ZaCwIFBclNShhPaoCQp2w5Zb7V9ODj1AjNx5ZhZxZX6WVgzcXTIw/EJg6LlA
-        PxmolU1Q4N9t+VEHoWlB8wqrIrfNTxbn5wVuNQSZSKSedumAcZjB8LzE2LJEkVrmtrkyi7MU7iAZRGjM
-        DGVAN3HTlv4C3X8tzeHQGPkFaQWWo5ZvkDBHBixWZyWS+jZ4uWzZcdC2feGF4TAzNCuLmFl653x4D1LZ
-        HF1jULrd7pO7wJtIs62HMiNmvNyCT9+3NjFc/WRtoj8UNSORMEqTE3C5XKbH46nZ0uOgW7nCW8m52P/C
-        /uG/QMJmoZCHXq383eRPIFGP1+eVxeJty8Tv98H+9E+cIZ5nOhyOC16vV4ZCIZMMP1pf/wOniGeJ54iW
-        kdPpDCqKcvon2Bz6fW2nzV4AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJDSURBVDhPjVNLTxNRFJ6FC2NcGMPvcOvaf9Gdv8FFN27G
+        PrCxbey8SkFqYwOktaJGhMYN1qZjKMRilYeCoFVLAAkoPph7LfTjnHEIQerjS07mTu79zvnOd89Vfoem
+        aZcty9pUVbXNkUwmW6Zp1uPxeJd3pDP4gGEYG0Ej0zaeNHHV/o6gLRCvbKGnWIdm9kDX9Qve8eOgyuup
+        sWnoUwL3XgmU3wmUKHjdWxOI2duw+rOdkxDZtu6Mo3daYHmrheb2Lp6vtlBadvDojYOHixKpmoRRWYeq
+        Xtn1aIegnvdilS94+uEn1r7tYWlzF7UVidJbB6MLDobnBIbnJa5Pkpr7ZVDBfo+qKIlE4ryRHkC0KjDx
+        XqD6UWCSwm44GF9yMPLaQX5WoDAnSaGE9bgBMnbVo7vyL5qDD5Cg7Nwzk7gyf4uLDu7OOxh6KTD4QuAG
+        JdDKayDDf3j0QwXXJgT1K9yKLJu/TM7NCNyqC0oikXzWQQHjwIOhGYmRBYkCSWbZXJnJaTJ3gBLEqM0+
+        8oBuIuNRf4Huv5pic6iN3Kx0DcuS5JtEzFICJmtTEqa9Qbegtj3aUdC0feWBYTP7qFcmcaRpzf7wHCTT
+        WUQiERkIBI7PAk8i9bYS0DNtvdRE2N5xJzFa+exOohoIt2OxKIpjo66KYDBY9ahHQbdyiaeSffHews7B
+        W6D/Rj6fg10p/z3Jn0CkrlA4JAuF226S7u4wvK1/4hTFWQ6fz3cuFAqxD/xaP7m7/4ETFKcpzlC4ifx+
+        f0RRlJP7Hdb5s715imMAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnVer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -235,8 +235,26 @@
   <metadata name="Venta.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="bsCliente.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>376, 16</value>
+  </metadata>
+  <metadata name="bsMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>578, 16</value>
+  </metadata>
+  <metadata name="bsServicio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>796, 16</value>
+  </metadata>
   <metadata name="taCitaMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>254, 16</value>
+  </metadata>
+  <metadata name="taCliente.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>478, 16</value>
+  </metadata>
+  <metadata name="taMascota.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>688, 16</value>
+  </metadata>
+  <metadata name="taArticulo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>902, 16</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>49</value>
